Bug 488884.  Blue Learn More link is really hard to read on the mac. r=gavin
UltraBlame original commit: 9b78b9dbdb0cceb3916d51aae8a5bb7b8543df57

--- a/toolkit/themes/pinstripe/global/notification.css
+++ b/toolkit/themes/pinstripe/global/notification.css
@@ -623,3 +623,64 @@ mac
 focusring
 ;
 }
+/
+*
+geolocation
+adds
+a
+text
+-
+link
+for
+a
+"
+Learn
+more
+.
+.
+.
+"
+link
+.
+normal
+blue
+color
+of
+text
+-
+link
+is
+hard
+to
+read
+.
+*
+/
+notification
+[
+type
+=
+"
+info
+"
+]
+.
+text
+-
+link
+{
+color
+:
+rgba
+(
+255
+255
+255
+0
+.
+95
+)
+!
+important
+;
+}
